--- a/src/pages/ItemDetail/ItemDetail.scss
+++ b/src/pages/ItemDetail/ItemDetail.scss
@@ -4,7 +4,7 @@
         width: 250px;
     }
     &__title{
-        font-size: 100px;
+        font-size: 40px;
     }
     &__vote{
 
@@ -22,6 +22,6 @@
         display: flex;
     }
     &__results{
-
+        width: 250PX;
     }
 }
