--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,112 @@
-.header{
+@import "../../styles/variables.scss";
+@import "../../styles/media-queries.scss";
+
+.header {
+  width: 100vw;
+  &__links {
+    padding: 20px 5px 15px 22px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $background-generic;
+  }
+  &__links-pages {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+
+    @include for-tablet-portrait-up {
+      flex-direction: row;
+    }
+  }
+
+  &__links-link {
+    padding-right: 10px;
+    text-decoration: none;
+    color: $font-color-light;
+    font-weight: 700;
+    font-family: "Poppins";
+    cursor: pointer;
+  }
+  &__links-link:hover {
+    text-decoration: underline;
+  }
+  &__lang {
+    padding: 5px;
+  }
+
+  &__lang-btn {
+    background: none;
+    color: $font-color-light;
+    border: none;
+    font-weight: 700;
+    cursor: pointer;
+  }
+  &__lang-btn:hover {
+    background: $font-color-light;
+    color: $font-color-generic;
+    border: none;
+    font-weight: 700;
+  }
+  &__background {
+    position: relative;
+  }
+  &__background-container-image {
+    width: 100%;
+    @include mobile-only {
+      height: 365px;
+      width: 1280px;
+      left: -380px;
+      top: 111px;
+      align-items: center;
+      justify-content: start;
+    }
+  }
+  &__background-container {
+    height: 365px;
+    width: 1280px;
+    left: -60px;
+    top: 111px;
+    @include mobile-only {
+      height: 365px;
+      width: 1280px;
+      left: -480px;
+      top: 111px;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__background-text--first {
+    position: absolute;
+    left: 37px;
+    top: 15px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    color: $font-color-light;
+
+    @include for-tablet-portrait-up {
+      left: 37px;
+      top: 100px;
+    }
+  }
+  &__background-text--second {
+    position: absolute;
+    left: 37px;
+    top: 80px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    padding-right: 10px;
+    color: $font-color-light;
+
+    @include for-tablet-portrait-up {
+      left: 37px;
+      top: 170px;
+      font-size: 25px;
+    }
+  }
 }
