--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,3 +30,11 @@ $pokemon-type-color-ghost: #705798;
 $pokemon-type-color-ice: #98D8D8;
 $pokemon-type-color-physchic: #F85888;
 $pokemon-type-color-water: #6890F0;
+
+$background-generic: #052641;
+$background-red: #dd5757;
+
+// Colores de fuentes
+$font-color-alternative: #2d2d2d;
+$font-color-light: #ffff;
+$font-color-generic: #052641;
