--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,9 +1,26 @@
-.item{
+.item {
+    padding: 10px;
     width: 150px;
-    margin: 15px;
-    text-decoration: none;
-    color: black;
-}
+    margin: 10px;
+    &__img {
+      height: 225px;
+      width: 150px;
+      border-radius: 10px;
+    }
+  
+    &__title {
+      font-weight: 700;
+      font-size: 16px;
+      margin-bottom: 2px;
+      max-width: 100%;
+    }
+    &__date {
+      font-weight: 300;
+      font-size: 14px;
+      margin-top: 0px;
+      max-width: 100%;
+    }
+  }
 .red{
     color: red;
 }
