--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -23,8 +23,8 @@
 }
 
 // UTILIDADES
-.mobile-only {
-  @include for-tablet-portrait-up {
-    display: none !important;
+@mixin mobile-only {
+  @media (max-width: 767px) {
+    @content;
   }
 }
