--- a/src/components/Discover/Discover.scss
+++ b/src/components/Discover/Discover.scss
@@ -1,13 +1,49 @@
 @import "../../styles/variables.scss";
+@import "../../styles/media-queries.scss";
 
 .discover {
   background-color: $background-generic;
-  margin-top: 10px;
+  margin: 10px 0;
+  padding-bottom: 20px;
   &__title {
     color: $font-color-light;
     padding: 15px;
     margin: 0px;
     font-weight: 700;
     font-size: 24px;
+  }
+  &__wraper{
+    overflow-x: scroll;
+  }
+  &__container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    padding: 10px;
+    justify-content: center;
+
+    @include for-tablet-portrait-up {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: normal;
+      padding: 10px;
+    }
+  }
+  &__btn-show-more{
+    color: #052641;
+    background-color: white;
+    font-size: 16px;
+    font-weight: 200;
+    padding: 10px 30px;
+    border-radius: 50px;
+    line-height: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
 }
