--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,15 +1,16 @@
 @import "../../styles/variables.scss";
+@import "../../styles/media-queries.scss";
 .footer {
   background-color: $background-generic;
-  padding: 20px;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-
+  height: 206px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &__img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
+    width: 150px;
+    @include for-tablet-portrait-up {
+      width: 208px;
+    }
   }
 }
