--- a/src/components/Discover/Discover.scss
+++ b/src/components/Discover/Discover.scss
@@ -35,15 +35,20 @@
   &__btn-show-more{
     color: #052641;
     background-color: white;
-    font-size: 16px;
-    font-weight: 200;
+    font-size: 14px;
+    font-weight: 300;
     padding: 10px 30px;
     border-radius: 50px;
     line-height: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    margin: 20px auto;
+    border: none;
+    &:hover {
+      background-color: #052641;
+      color:  white;
+      border: 1px solid white;
+    }
   }
 }
