--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     background-color: $background-generic;
   }
   &__links-pages {
@@ -34,6 +34,7 @@
   }
   &__lang {
     padding: 5px;
+    margin-left: 10px;
     display: flex;
  
 
