--- a/src/components/Unete/Unete.scss
+++ b/src/components/Unete/Unete.scss
@@ -23,6 +23,8 @@
         font-size: 32px;
         font-weight: bold;
         color: white;
+        align-self: baseline;
+        margin-bottom: 10px;
         @include for-tablet-portrait-up {
             font-size: 36px;
         }
