--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -22,6 +22,8 @@
         font-size: 36px;
         font-weight: bold;
         color: white;
+        align-self: baseline;
+        margin-bottom: 10px;
         @include for-tablet-portrait-up {
             font-size: 36px;
         }
