--- a/src/styles/section_home.scss
+++ b/src/styles/section_home.scss
@@ -4,7 +4,8 @@
 .section {
   display: flex;
   flex-direction: column;
-  padding-bottom: 20px;
+  padding: 10px;
+  align-items: flex-start;
   &__text {
     display: flex-start;
     flex-direction: column;
@@ -31,12 +32,14 @@
   }
   &__films--wrapper {
     overflow-x: scroll;
+    width: 100%;
   }
   &__films {
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+
     justify-content: center;
+    align-items: baseline;
 
     @include for-tablet-portrait-up {
       display: flex;
@@ -50,20 +53,28 @@
     margin: 10px;
     display: inline-block;
     align-items: start;
+    border: none;
+    &:hover {
+      background-color: $font-color-light;
+      color: $font-color-generic;
+      border: 1px solid $font-color-generic;
+    }
   }
-  &__btn-time:hover {
-    background-color: $font-color-light;
-    color: $font-color-generic;
-    border: 1px solid $font-color-generic;
-  }
+  
 
   &__show-more {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px auto;
+    margin: 20px auto;
+    border: none;
     // @include for-tablet-portrait-up {
     //   display: none;
     // }
+    &:hover {
+      background-color: $font-color-light;
+      color: $font-color-generic;
+      border: 1px solid $font-color-generic;
+    }
   }
 }
