--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -1,4 +1,5 @@
 .game-page {
+ 
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -17,6 +18,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    margin: 20px auto;
   }
 
   &__options {
@@ -39,22 +41,21 @@
   &__solve-btn {
     margin: 0 10px;
   }
-  &__img-solved{
+  &__img{
+ 
     width: 265px;
     margin: 20px auto;
     border-radius: 10px;
-  }
-  &__img-notsolved{
-    width: 265px;
-    height: 398px;
-    background-color: #C2D0DB;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px auto;
-    border-radius: 10px;
+    &--hide{
+      filter: brightness(0%) opacity(50%);
+      width: 265px;
+      border-radius: 10px;
+    }
   }
   &__icon{
+    position: relative;
+    top: 258px;
+    left: 1px;
     font-size: 100px;
 
   }
