add show more button to itemdetail

--- a/src/components/CastDetail/CastDetail.scss
+++ b/src/components/CastDetail/CastDetail.scss
@@ -22,4 +22,18 @@
         width: 130px;
         color: #2D2D2D;
     }
+    &__not-img{
+        width: 130px;
+        height: 195px;
+        border-radius: 10px;
+        background-color: rgb(161, 161, 161);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__not-img-text{
+        font-size: 80px;
+        font-weight: bold;
+        color: #2D2D2D;
+    }
 }
