--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
-@import "../../styles/variables.scss";
 @import "../../styles/media-queries.scss";
+
 .footer {
-  background-color: $background-generic;
+  background-color: #052641;
   width: 100%;
   height: 206px;
   display: flex;
