--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,3 @@
-@import "./variables.scss";
 
 body,
 html,
@@ -9,7 +8,7 @@ html,
   height: 100%;
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  color: $font-color-generic;
+  color: #052641;
   overflow-x: hidden;
 }
 
@@ -23,28 +22,4 @@ button {
   font-family: 'Poppins', sans-serif;
 }
 
-a {
-  text-decoration: none;
-}
 
-/* Remove borders while loading image */
-img[src=""],
-img[src="undefined"],
-img:not([src]) {
-  opacity: 0;
-}
-
-@keyframes show {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.show-slow {
-  opacity: 1;
-  animation: show ease-in-out 500ms;
-}
