--- a/src/styles/section_home.scss
+++ b/src/styles/section_home.scss
@@ -1,4 +1,3 @@
-@import "./variables.scss";
 @import "./media-queries.scss";
 
 .section {
@@ -22,12 +21,12 @@
     margin: 0px;
     font-weight: 700;
     font-size: 24px;
-    color: $font-color-alternative;
+    color: #2d2d2d;
     @include for-tablet-portrait-up {
       padding: 15px;
       font-weight: 700;
       font-size: 24px;
-      color: $font-color-alternative;
+      color: #2d2d2d;
     }
   }
   &__films--wrapper {
@@ -55,9 +54,9 @@
     align-items: start;
     border: none;
     &:hover {
-      background-color: $font-color-light;
-      color: $font-color-generic;
-      border: 1px solid $font-color-generic;
+      background-color: #ffff;
+      color: #2d2d2d;
+      border: 1px solid #2d2d2d;
     }
   }
   
@@ -72,9 +71,9 @@
     //   display: none;
     // }
     &:hover {
-      background-color: $font-color-light;
-      color: $font-color-generic;
-      border: 1px solid $font-color-generic;
+      background-color: #ffff;
+      color: #2d2d2d;
+      border: 1px solid #2d2d2d;
     }
   }
 }
