--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -18,9 +18,37 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin: 20px auto;
+    background-color: #052641;
+    color: #fff;
+    width: 100%;
+    position: relative;
+    top: -3px;
   }
-
+  &__data{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    padding: 10px;
+  }
+  &__title{
+    font-size: 20px;
+    font-weight: bold;
+  }
+  &__subtitle{
+    font-size: 12px;
+    font-weight: 200;
+  }
+  &__sinopsis-title{
+    font-size: 16px;
+    font-weight: bold;
+  }
+  &__sinopsis{
+    font-size: 12px;
+    font-weight: 200;
+  }
   &__options {
     display: flex;
     flex-direction: column;
@@ -47,7 +75,7 @@
     margin: 20px auto;
     border-radius: 10px;
     &--hide{
-      filter: brightness(0%) opacity(30%);
+      filter: brightness(0%) opacity(40%);
       width: 265px;
       border-radius: 10px;
     }
@@ -59,4 +87,10 @@
     font-size: 100px;
 
   }
+}
+.game-page h3{
+  font-size: 24px;
+  font-weight: bold;
+  margin: 30px auto;
+  color: #2D2D2D;
 }
