--- a/src/pages/ItemDetail/ItemDetail.scss
+++ b/src/pages/ItemDetail/ItemDetail.scss
@@ -1,9 +1,9 @@
+@import "../../styles/media-queries.scss";
 .item-detail{
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    
     &__header{
         background-color: #052641 ;
         color: white;
@@ -12,23 +12,36 @@
         justify-content: center;
         position: relative;
         top: -5px;
+        @include for-tablet-portrait-up {
+            flex-flow: row nowrap;
+            align-items: flex-start;
+            padding: 40px 0;
+        }
     }   
-   
     &__img{
-      
         width: 250px;
         text-align: center;
         margin: 10px auto;
         border-radius: 10px;
+        @include for-tablet-portrait-up {
+            margin: 10px 9px 0 40px;
+        }
     }
-
     &__info{
-        padding: 20px;
+        padding: 0 20px;
+        @include for-tablet-portrait-up {
+            width: 55%;
+            margin: 0 20px;
+        }
     }
     &__title{
         font-size: 20px;
         font-weight: bold;
         text-align: center;
+        @include for-tablet-portrait-up {
+            font-size: 28px;
+            text-align: start;
+        }
     }
     &__vote{
         font-size: 12px;
@@ -37,12 +50,18 @@
     &__data{
         font-size: 12px;
         font-weight: 200;
+        @include for-tablet-portrait-up {
+            font-size: 14px;
+        }
     }
     &__subtitle{
         font-size: 12px;
         font-weight: 200;
         text-align: start;
         margin-bottom: 10px;
+        @include for-tablet-portrait-up {
+            font-size: 14px;
+        }
     }
     &__overview{
         font-size: 12px;
@@ -53,6 +72,9 @@
         font-size: 16px;
         font-weight: bold;
         margin-bottom: 10px;
+        @include for-tablet-portrait-up {
+            font-size: 18px;
+        }
     }
     &__crew-container{
         display: flex;
@@ -61,11 +83,35 @@
         width: 100%;
         flex-direction: column;
         flex-wrap: wrap;
+        @include for-tablet-portrait-up {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+    }
+    &__cast-wrap{
+        width: 100%;
     }
     &__cast{
         display: flex;
         flex-direction: column;
         padding: 10px;
+        
+    }
+    &__cast-items{
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        @include for-tablet-portrait-up {
+            justify-content: normal;
+            flex-wrap: nowrap;
+        }
     }
     &__cast-title{
         margin-top: 10px;
@@ -78,9 +124,15 @@
         width: 100%;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: flex-start;
         align-items: flex-start;
-        
+        @include for-tablet-portrait-up {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
     }
     &__results{
         width: 100%;
@@ -94,11 +146,37 @@
         font-weight: bold;
         margin: 10px 0;
     }
+    &__results-wrap{
+        width: 100%;
+    }
+    &__results-div{
+        display: flex;
+        flex-flow: column nowrap;
+        width: 100%;
+        flex-wrap: nowrap;
+        @include for-tablet-portrait-up {
+            display: flex;
+            flex-flow: row nowrap;
+            width: 100%;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+        }
+    }
     &__results-container{
-        width: 90%;
-        text-decoration: none;
-        color: #2D2D2D;
-      
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        @include for-tablet-portrait-up {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
     }
     &__exterior-circle{
         display: flex;
@@ -128,7 +206,6 @@
         height: 34px;
         border-radius: 50px;
         background-color:  #052641;
-  
     }
     &__vote{
         color: white;
@@ -141,20 +218,24 @@
         font-weight: 300;
     }
 }
-
 .link{
     text-decoration: none;
     color: #2D2D2D;
+    max-width: 300px;
+    margin: 10px;
     &__container{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: flex-start;
+        max-width: 300px;
     }
 }
-.link img{
-border-radius: 10px;
-margin-top: 10px;
+
+.link img{        
+    border-radius: 10px;
+    margin-top: 10px;
+    max-width: 300px;
 }
 .link h4{
     font-size: 16px;
@@ -162,9 +243,7 @@ margin-top: 10px;
 }
 .link p{
     font-size: 16px;
-
 }
-
 .item-detail h2{
     font-size: 15px;
     text-align: center;
