--- a/src/components/CastDetail/CastDetail.scss
+++ b/src/components/CastDetail/CastDetail.scss
@@ -1,3 +1,4 @@
+@import "../../styles/media-queries.scss";
 .cast-detail{
     margin: 10px;
     display: flex;
@@ -5,6 +6,7 @@
     justify-content: center;
     align-items: flex-start;
     word-wrap: break-word;
+  
    
     &__img{
         width: 130px;
@@ -18,7 +20,7 @@
     }
     &__character{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 200;
         width: 130px;
         color: #2D2D2D;
     }
