--- a/src/components/CrewDetail/CrewDetail.scss
+++ b/src/components/CrewDetail/CrewDetail.scss
@@ -2,13 +2,15 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    margin: 10px 0;
+    margin: 10px 40px 10px 0;
     &__name{
         font-size: 12px;
         font-weight: bold;
+        width: 100%;
     }
     &__job{
         font-size: 12px;
-        font-weight: 300;
+        font-weight: 200;
+        width: 100%;
     }
 }
