--- a/src/components/Discover/Discover.scss
+++ b/src/components/Discover/Discover.scss
@@ -32,22 +32,27 @@
     }
   }
   &__btn-show-more{
-    color: #052641;
-    background-color: white;
-    font-size: 14px;
-    font-weight: 300;
-    padding: 10px 30px;
-    border-radius: 50px;
-    line-height: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px auto;
+    margin: 20px 10px;
     border: none;
+    background-color: #ffff;
+    border-radius: 50px;
+    padding: 10px 20px;
+    align-self: center;
+    width: 150px;
     &:hover {
-      background-color: #052641;
-      color:  white;
-      border: 1px solid white;
+      background-color: #ffff;
+      color: #2d2d2d;
+      border: 1px solid #2d2d2d;
+    }
+ 
+    @include for-tablet-portrait-up {
+      width: 80px;
+      height: 150px;
+      margin: 0 20px;
+      align-self: center;
     }
   }
 }
