--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -24,7 +24,7 @@
 
 // UTILIDADES
 @mixin mobile-only {
-  @media (max-width: 767px) {
+  @media (min-width: 321px) and (max-width: 767px) {
     @content;
   }
 }
