--- a/src/styles/section_home.scss
+++ b/src/styles/section_home.scss
@@ -33,10 +33,20 @@
     overflow-x: scroll;
     width: 100%;
   }
+  &__films-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    @include for-tablet-portrait-up {
+      flex-wrap: nowrap;
+    }
+  }
+  
   &__films {
     display: flex;
     flex-wrap: wrap;
-
     justify-content: center;
     align-items: baseline;
 
@@ -59,21 +69,22 @@
       border: 1px solid #2d2d2d;
     }
   }
-  
-
   &__show-more {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px auto;
     border: none;
-    // @include for-tablet-portrait-up {
-    //   display: none;
-    // }
     &:hover {
       background-color: #ffff;
       color: #2d2d2d;
       border: 1px solid #2d2d2d;
+    }
+ 
+    @include for-tablet-portrait-up {
+      height: 150px;
+      margin: 0 20px;
+      align-self: center;
     }
   }
 }
