add score component

--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -41,38 +41,10 @@
     margin-top: 0px;
     max-width: 100%;
   }
-  &__exterior-circle{
-    position: absolute;
-    top: 174px;
-    left: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    background-color: #052641;
-  
-  }
-  &__interior-circle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 34px;
-    height: 34px;
-    border-radius: 50px;
-    background-color:  #052641;
-  
-  }
-  &__vote{
-    color: white;
-    font-size: 12px;
-    font-weight: 700;
-    text-align: center
-  }
-  &__span{
-    font-size: 8px;
-    font-weight: 300;
+  &__score-wrap{
+      position: absolute;
+      top: 174px;
+      left: 15px;
   }
 }
 
