--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,4 +22,15 @@ button {
   font-family: 'Poppins', sans-serif;
 }
 
-
+.red{
+  border:3px solid rgb(240, 175, 175)
+}
+.orange{
+  border:3px solid #F4F954
+}
+.green{
+  border:3px solid rgb(163, 227, 163)
+}
+.blue{
+  border:3px solid #6EFAD7
+}
